--- a/sponsors.html
+++ b/sponsors.html
@@ -25,7 +25,7 @@
                 <li><a class="slideout-list-items" href="index.html#news">News</a></li>
                 <li><a class="slideout-list-items" href="index.html#about">About</a></li>
                 <li><a class="slideout-list-items" href="index.html#teams">Hydracore Teams</a></li>
-                <li><a class="slideout-list-items" href="index.html#contact">Contact</a></li>
+                <li><a class="slideout-list-items" href="#contact">Contact</a></li>
                 <li><a class="slideout-list-items" href="media.html">Media</a></li>
                 <li><a class="slideout-list-items" href="sponsors.html">Sponsors</a></li>
                 <!-- <li><a class="slideout-list-items" href="#stream-team">Stream Team</a></li>
@@ -55,76 +55,44 @@
                                     src="images/kinguin.png" atl="Kinguin"></a></li>
                         <li class="sponsors"><a href="#ex3" rel="modal:open"><img class="img--frame"
                                     src="images/HTC.svg" atl="HTC"></a></li>
-                        <li class="sponsors"><a href="#ex4" rel="modal:open"><img
-                                    class="img--frame" src="images/hidemyass.png" atl="HideMyAss VPN"></a></li>
+                        <li class="sponsors"><a href="#ex4" rel="modal:open"><img class="img--frame"
+                                    src="images/hidemyass.png" atl="HideMyAss VPN"></a></li>
                     </ul>
                 </div>
 
             </div>
         </div>
 
-           <!-- Modal Content -->
+        <!-- Modal Content -->
 
-    <div id="ex1" class="modal">
-        <img class="modal-logo" src="images/zee_logo.jpg">
-        <p>ZeeKiwi.HCG is a 6-year Army Veteran who spent his time in the military with Special Forces units as a military
-          intelligence professional. He typically goes by the name of "Zee" and is the owner and founder of HydraCore
-          Gaming. Zee is 24 years old and loves guns in real life just as much as he does in video games..</p>
-        <ul class="contact-info">
-          <li><a href="https://twitter.com/hydracoregaming" target="_blank"><img class="contact-icons"
-                src="images/twitter-icon.png"></a></li>
-          <li><a href="https://www.twitch.tv/zeekiwitv" target="_blank"><img class="contact-icons"
-                src="images/twitch-icon.png"></a></li>
-          <li><a href="https://www.youtube.com/channel/UCkq9cgpLhQo-7wlFyGwkU_w" target="_blank"><img
-                class="contact-icons" src="images/youtube-icon.png"></a></li>
-        </ul>
-      </div>
-  
-      <div id="ex2" class="modal">
-        <img class="modal-logo" src="images/flexy_logo.png">
-        <p>Flexy.HCG is a 21-year old avid gamer who has been playing video games since the age of 9. He has logged over
-          2,000 hours on R6S and has an ultimate dream of going pro-league. Flexy, also known as Kyle, is a born again
-          gamer and has decided to move forward from his toxic....toxic past. More to come from this guy in the future!
-        </p>
-        <ul class="contact-info">
-          <li><a href="https://twitter.com/Flexyy_r6" target="_blank"><img class="contact-icons"
-                src="images/twitter-icon.png"></a></li>
-          <li><a href="https://www.twitch.tv/flexy_r6" target="_blank"><img class="contact-icons"
-                src="images/twitch-icon.png"></a></li>
-          <li><a href="https://www.youtube.com/channel/UC_EPTa6bXdvsKhAD1KLrYKw" target="_blank"><img
-                class="contact-icons" src="images/youtube-icon.png"></a></li>
-        </ul>
-      </div>
-  
-      <div id="ex3" class="modal">
-        <img class="modal-logo" src="images/mrv_logo.png">
-        <p>MRV2.HCG is a 21 year old gamer who also loves to play sports as well. He is one of two resident Canadian HCG
-          members and has high aspirations within the competitive Siege scene. Although new to the game, he has shown
-          great promise in ability to drop high kill count and an absolutely amazing support capability. He is excited for
-          the prospect of Naga to become a CL team in the very near future.
-        </p>
-        <ul class="contact-info">
-          <li><a href="https://twitter.com/MRV2.HCG" target="_blank"><img class="contact-icons"
-                src="images/twitter-icon.png"></a></li>
-          <li><a href="https://www.twitch.tv/mrv2_r6" target="_blank"><img class="contact-icons"
-                src="images/twitch-icon.png"></a></li>
-        </ul>
-      </div>
-  
-      <div id="ex4" class="modal">
-        <img class="modal-logo" src="images/kinky_logo.png">
-        <p>Kinky.HCG is a goofy, fun, and dedicated player. Competed in R6S for 3 years and has been playing since beta.
-          Switched to PC after 2 years and console play. Randy "Kinky" Woodward constantly practices and aims fo be the
-          best player he can be . He is an Agent of Impact for Hope For The Day. It's Ok to not be ok. </p>
-      </div>
-  
-      <div id="ex5" class="modal">
-        <img class="modal-logo" src="images/placeholder.png">
-        <p>Murky is a very goofy and fun to be around 24 year old that has had a love and passion for Rainbow Six Siege
-          ever since day it was annouced at E3. He first started to play the game on console and the game suckered him
-          into building his own PC. Dalton ''Murky" Adams has always wanted to play the game and learn something new every
-          time he gets on.</p>
-      </div>
+        <div id="ex1" class="modal">
+            <a href="http://www.tkqlhce.com/click-9026530-12588435" target="_top">
+                <img class="modal-sponsor" src="http://www.awltovhc.com/image-9026530-12588435" width="728" height="90"
+                    alt="" border="0" /></a>
+        </div>
+
+        <div id="ex2" class="modal">
+            <a href="http://www.kqzyfj.com/click-9026530-12193128" target="_top">
+                <img class="modal-sponsor" src="http://www.tqlkg.com/image-9026530-12193128" width="300" height="250"
+                    alt="Kinguin.net - Save on Every Game!" border="0" /></a>
+        </div>
+
+        <div id="ex3" class="modal">
+            <a href="http://www.kqzyfj.com/click-9026530-12920725" target="_top">
+                <img class="modal-sponsor" src="http://www.lduhtrp.net/image-9026530-12920725" width="300" height="234"
+                    alt="HTC Vive" border="0" /></a>
+        </div>
+
+        <div id="ex4" class="modal">
+            <a href="http://www.kqzyfj.com/click-9026530-13477315" target="_top">
+                <img class="modal-sponsor" src="http://www.awltovhc.com/image-9026530-13477315" width="468" height="60"
+                    alt="Online Protection" border="0" /></a>
+
+        </div>
+
+        <div id="ex5" class="modal">
+            <img class="modal-logo" src="images/placeholder.png">
+        </div>
 
 
 
@@ -172,36 +140,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slideout/1.0.1/slideout.min.js"></script>
     <script src="JS/main.js"></script>
-    <script>
-        var slideout = new Slideout({
-            'panel': document.getElementById('panel'),
-            'menu': document.getElementById('menu'),
-            'padding': 256,
-            'tolerance': 70
-        });
 
-        // Toggle button
-        document.querySelector('.toggle-button').addEventListener('click', function () {
-            slideout.toggle();
-        });
-
-        function close(eve) {
-            eve.preventDefault();
-            slideout.close();
-        }
-
-        slideout
-            .on('beforeopen', function () {
-                this.panel.classList.add('panel-open');
-            })
-            .on('open', function () {
-                this.panel.addEventListener('click', close);
-            })
-            .on('beforeclose', function () {
-                this.panel.classList.remove('panel-open');
-                this.panel.removeEventListener('click', close);
-            });
-    </script>
 
 </body>
 
