--- a/turbulent.html
+++ b/turbulent.html
@@ -25,7 +25,7 @@
                 <li><a class="slideout-list-items" href="index.html#news">News</a></li>
                 <li><a class="slideout-list-items" href="index.html#about">About</a></li>
                 <li><a class="slideout-list-items" href="index.html#teams">Hydracore Teams</a></li>
-                <li><a class="slideout-list-items" href="index.html#contact">Contact</a></li>
+                <li><a class="slideout-list-items" href="#contact">Contact</a></li>
                 <li><a class="slideout-list-items" href="media.html">Media</a></li>
                 <li><a class="slideout-list-items" href="sponsors.html">Sponsors</a></li>
                 <!-- <li><a class="slideout-list-items" href="#stream-team">Stream Team</a></li>
@@ -40,7 +40,7 @@
         <header>
             <button class="toggle-button">☰</button>
             <img class="img--logo" src="images/main-logo.png" alt="hydracore gaming logo">
-            <h2 class="headline--primary">Team Fearless</h2>
+            <h2 class="headline--primary">Team Turbulent</h2>
         </header>
         <div class="wrapper">
             <div class="grid__col--skills">
@@ -184,43 +184,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slideout/1.0.1/slideout.min.js"></script>
     <script src="JS/main.js"></script>
-    <script>
-        var slideout = new Slideout({
-            'panel': document.getElementById('panel'),
-            'menu': document.getElementById('menu'),
-            'padding': 256,
-            'tolerance': 70
-        });
 
-        // Toggle button
-        document.querySelector('.toggle-button').addEventListener('click', function () {
-            slideout.toggle();
-        });
-
-        function close(eve) {
-            eve.preventDefault();
-            slideout.close();
-        }
-
-        slideout
-            .on('beforeopen', function () {
-                this.panel.classList.add('panel-open');
-            })
-            .on('open', function () {
-                this.panel.addEventListener('click', close);
-            })
-            .on('beforeclose', function () {
-                this.panel.classList.remove('panel-open');
-                this.panel.removeEventListener('click', close);
-            });
-
-        $('a.open-modal').click(function (event) {
-            $(this).modal({
-                fadeDuration: 250
-            });
-            return false;
-        });
-    </script>
 
 </body>
 
