updated the news section

--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
       <div class="grid__row" id="news">
         <div class="grid__col--12">
           <div class="card">
+            <ul class="rslides">
+              <li>I hate the news section</li>
+              <li>Because its terrible and I have nothign to put here</li>
+              <li>Go away news section</li>
+            </ul>
 
           </div>
         </div>
@@ -152,7 +157,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slideout/1.0.1/slideout.min.js"></script>
-  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <script src="JS/responsiveslides.min.js"></script>
   <script src="JS/main.js"></script>
 
 </body>
