--- a/naga.html
+++ b/naga.html
@@ -85,7 +85,7 @@
         intelligence professional. He typically goes by the name of "Zee" and is the owner and founder of HydraCore
         Gaming. Zee is 24 years old and loves guns in real life just as much as he does in video games..</p>
       <ul class="contact-info">
-        <li><a href="https://twitter.com/hydracoregaming" target="_blank"><img class="contact-icons"
+        <li><a href="https://www.twitter.com/zeekiwitv" target="_blank"><img class="contact-icons"
               src="images/twitter-icon.png"></a></li>
         <li><a href="https://www.twitch.tv/zeekiwitv" target="_blank"><img class="contact-icons"
               src="images/twitch-icon.png"></a></li>
@@ -130,6 +130,12 @@
       <p>Kinky.HCG is a goofy, fun, and dedicated player. Competed in R6S for 3 years and has been playing since beta.
         Switched to PC after 2 years and console play. Randy "Kinky" Woodward constantly practices and aims fo be the
         best player he can be . He is an Agent of Impact for Hope For The Day. It's Ok to not be ok. </p>
+      <ul class="contact-info">
+        <li><a href="https://twitter.com/kinkyr6" target="_blank"><img class="contact-icons"
+              src="images/twitter-icon.png"></a></li>
+        <li><a href="https://www.twitch.tv/KinkyR6s" target="_blank"><img class="contact-icons"
+              src="images/twitch-icon.png"></a></li>
+      </ul>
     </div>
 
     <div id="ex5" class="modal">
