--- a/synergy.html
+++ b/synergy.html
@@ -61,14 +61,14 @@
                 <div class="skills--card">
                     <a href="#ex3" rel="modal:open"><img class="img--frame__roster" src="images/pria.png"
                             alt="main logo">
-                        <h3 class="headline--tertiary">Pria.HCG</h3>
+                        <h3 class="headline--tertiary">Panda.HCG</h3>
                     </a>
                     <hr>
                 </div>
                 <div class="skills--card">
-                    <a href="#ex4" rel="modal:open"><img class="img--frame__roster" src="images/scorpion.png"
+                    <a href="#ex4" rel="modal:open"><img class="img--frame__roster" src="images/empire.png"
                             alt="tranquil logo">
-                        <h3 class="headline--tertiary">Scorpion.HCG</h3>
+                        <h3 class="headline--tertiary">Empire.HCG</h3>
                     </a>
                     <hr>
                 </div>
@@ -89,16 +89,30 @@
             <p>Azohar_.HCG is a lifelong gamer and ignited his passion for gaming with Super Mario Bros back in 1987
                 and hasn't looked back since. He typically goes by "Azo, Azohar, or Az". Azohar holds a phenomenal team
                 dynamic and maintains an impressive ability to flex between multiple roles on Team Synergy.</p>
-            <!-- <a href="#" rel="modal:close">Close</a> -->
+            <ul class="contact-info">
+                <li><a href="https://www.twitter.com/azohar_" target="_blank"><img class="contact-icons"
+                            src="images/twitter-icon.png"></a></li>
+                <li><a href="https://www.twitch.tv/azohar_" target="_blank"><img class="contact-icons"
+                            src="images/twitch-icon.png"></a></li>
+                <li><a href="https://www.youtube.com/channel/UC12DyvtthdRFpjz7-jRvP6w" target="_blank"><img
+                            class="contact-icons" src="images/youtube-icon.png"></a></li>
+            </ul>
         </div>
 
         <div id="ex2" class="modal">
-            <img class="modal-logo" src="images/placeholder.png">
+            <img class="modal-logo" src="images/benji_logo.jpg">
             <p>Benji.HCG is a hardcore siege player and devotes a minimum of 3 hours daily to play before he goes to
                 work as an aircraft mechanic for the US Air Force. He is a flex player but enjoys anchoring or support
                 play the most. I can see hydracore making it in pro league and dominating.
             </p>
-            <!-- <a href="#" rel="modal:close">Close</a> -->
+            <ul class="contact-info">
+                <!-- <li><a href="https://www.twitter.com/azohar_" target="_blank"><img class="contact-icons"
+                            src="images/twitter-icon.png"></a></li> -->
+                <li><a href="https://www.twitch.tv/kingbenjius" target="_blank"><img class="contact-icons"
+                            src="images/twitch-icon.png"></a></li>
+                <!-- <li><a href="https://www.youtube.com/channel/UC12DyvtthdRFpjz7-jRvP6w" target="_blank"><img
+                            class="contact-icons" src="images/youtube-icon.png"></a></li> -->
+            </ul>
         </div>
 
         <div id="ex3" class="modal">
@@ -108,20 +122,25 @@
                 Strike and eventually onto Siege. Synergy has been a way for me to advance my skills both as a team mate
                 and a player. Can’t wait to see what this season has in store for us.
             </p>
-            <!-- <a href="#" rel="modal:close">Close</a> -->
+            <ul class="contact-info">
+                <!-- <li><a href="https://www.twitter.com/azohar_" target="_blank"><img class="contact-icons"
+                            src="images/twitter-icon.png"></a></li> -->
+                <li><a href="https://www.twitch.tv/pandasdivision" target="_blank"><img class="contact-icons"
+                            src="images/twitch-icon.png"></a></li>
+                <!-- <li><a href="https://www.youtube.com/channel/UC12DyvtthdRFpjz7-jRvP6w" target="_blank"><img
+                            class="contact-icons" src="images/youtube-icon.png"></a></li> -->
+            </ul>
         </div>
 
         <div id="ex4" class="modal">
-            <img class="modal-logo" src="images/scorpion_logo.jpg">
-            <p>Scorpion.HCG is a 16 year old boy who loves sports, hunting, and fishing. I like to make jokes and have
-                a good time, but when its time to get serious, I do it. My real name is Rudy (Scorpion). I also like to
-                learn new things, and expand my knowledge. I hope I get to meet you and have a fantastic rest of your
-                day!</p>
+            <img class="modal-logo" src="images/empire_logo.jpg">
+            <p>I’m 23 years old father of 3. Love playing rainbow six siege. I run my own water business Check it out -
+                Ninepointfive.life</p>
             <!-- <a href="#" rel="modal:close">Close</a> -->
         </div>
 
         <div id="ex5" class="modal">
-            <img class="modal-logo" src="images/placeholder.png">
+            <img class="modal-logo" src="images/eagle_logo.jpg">
             <p>MrEagleEye.HCG Is a 21 year old Collision repairman and auto painter, Practices archery for fun and is a
                 proud
                 advocate to suicide prevention and help methods. A lifetime gamer, and a huge batman fan.</p>
