--- a/turbulent.html
+++ b/turbulent.html
@@ -44,20 +44,21 @@
         </header>
         <div class="wrapper">
             <div class="grid__col--skills">
-                <div class="skills--card" id="myBtn">
-                    <a href="#ex1" rel="modal:open"><img class="img--frame__roster" src="images/logic.png"
-                            alt="naga logo">
-                        <h3 class="headline--tertiary">Logic.HCG</h3>
-                    </a>
-                    <hr>
-                </div>
                 <div class="skills--card">
-                    <a href="#ex2" rel="modal:open"><img class="img--frame__roster" src="images/hobo.png"
+                    <a href="#ex1" rel="modal:open"><img class="img--frame__roster" src="images/hobo.png"
                             alt="main logo">
                         <h3 class="headline--tertiary">HoboJ3nk1ns.HCG</h3>
                     </a>
                     <hr>
                 </div>
+                <div class="skills--card" id="myBtn">
+                    <a href="#ex2" rel="modal:open"><img class="img--frame__roster" src="images/grizzly.png"
+                            alt="naga logo">
+                        <h3 class="headline--tertiary">Grizzly.HCG</h3>
+                    </a>
+                    <hr>
+                </div>
+
                 <div class="skills--card">
                     <a href="#ex3" rel="modal:open"><img class="img--frame__roster" src="images/kiy.png"
                             alt="main logo">
@@ -75,7 +76,7 @@
                 <div class="skills--card">
                     <a href="#ex5" rel="modal:open"><img class="img--frame__roster" src="images/lotus.png"
                             alt="main logo">
-                        <h3 class="headline--tertiary">Lotus.HCG</h3>
+                        <h3 class="headline--tertiary">D_redeemr.HCG</h3>
                     </a>
                     <hr>
                 </div>
@@ -85,23 +86,39 @@
         <!-- Modal Content -->
 
         <div id="ex1" class="modal">
-            <img class="modal-logo" src="images/placeholder.png">
-            <p>Im David Aka, The Captain/The Entry Fragger/Roamer for the Fearless Hydracore team. Ive been with the
-                team for nine months and am grinding all day every day. I love playing siege and have been playing for a
-                year. I love the patriots and can be a lil dum. He hopes to one day go pro-league and intends on his
-                team going CL within the next year.</p>
-            <!-- <a href="#" rel="modal:close">Close</a> -->
-        </div>
-
-        <div id="ex2" class="modal">
             <img class="modal-logo" src="images/hobo_logo.png">
             <p>Hoboj3k1ns.Hydra is a lifelong gamer and ignited his passion for gaming with MidEvil back in 1998. He
                 typically goes by "hobo". He worked as an IT tech but now works in a electronics store and his dream
                 ever since he was a kid was to become a pro gamer. Hobo has been misidentified as Jesus, the Messiah of
                 the popular religion "Christianity", and sometimes a homeless hippie.
             </p>
-            <!-- <a href="#" rel="modal:close">Close</a> -->
+            <ul class="contact-info">
+                <li><a href="https://twitter.com/hoboj3k1ns" target="_blank"><img class="contact-icons"
+                            src="images/twitter-icon.png"></a></li>
+                <li><a href=" https://twitch.tv/hoboj3k1ns" target="_blank"><img class="contact-icons"
+                            src="images/twitch-icon.png"></a></li>
+                <li><a href="https://www.youtube.com/channel/UCvoLmcFLvZGBGNOW9SK5c7w" target="_blank"><img
+                            class="contact-icons" src="images/youtube-icon.png"></a></li>
+            </ul>
+
         </div>
+
+        <div id="ex2" class="modal">
+            <img class="modal-logo" src="images/grizzly_logo.png">
+            <p>Grizzly is a 23 year-old streamer that has been gaming since he was 4 years-old. He is one of the
+                founders of HydraCore Gaming. When he's not playing Siege, he's usually playing on GTA 5 roleplaying it
+                out. He is known as the class clown and punching bag on the team, always taking the roasts like a champ
+                and occasionally throwing some good ones back at the boys. If you love metal and deathmetal/deathcore,
+                you might just be his newest friend!</p>
+            <ul class="contact-info">
+                <li><a href="http://www.twitter.com/basicgrizzbear" target="_blank"><img class="contact-icons"
+                            src="images/twitter-icon.png"></a></li>
+                <li><a href="http://www.twitch.tv/basicallyimagrizzlybear" target="_blank"><img class="contact-icons"
+                            src="images/twitch-icon.png"></a></li>
+            </ul>
+        </div>
+
+
 
         <div id="ex3" class="modal">
             <img class="modal-logo" src="images/placeholder.png">
@@ -122,20 +139,20 @@
         </div>
 
         <div id="ex5" class="modal">
-            <img class="modal-logo" src="images/placeholder.png">
+            <img class="modal-logo" src="images/d_redeemr_logo.jpg">
             <p>Hi, My name is Samuel “Lotus” Ellisor, and i have been playing game for as long as i can remember. I had
                 originally started out with Games such as Counter Strike Source and Halo to the abundance of games i
                 play now. I hope to go Pro in Rainbow at some point but before that i have to get better where i’m
                 lacking. There is no better fun than winning in my book and I intend to do so. I would say i’m the least
-                experienced in this org but, i’m no stranger to teamplay and i’m here to show my dominance. See you guys
-                in the games!</p>
+                experienced in this org but, i’m no stranger to teamplay and i’m here to show my dominance from behind
+                the scenes as a support. See you guys in the games!</p>
             <ul class="contact-info">
-                <!-- <li><a href="https://twitter.com/hydracoregaming" target="_blank"><img class="contact-icons"
-                            src="images/twitter-icon.png"></a></li> -->
+                <li><a href="https://twitter.com/Dredeemr" target="_blank"><img class="contact-icons"
+                            src="images/twitter-icon.png"></a></li>
                 <li><a href="https://www.twitch.tv/d_redeemr" target="_blank"><img class="contact-icons"
                             src="images/twitch-icon.png"></a></li>
-                <li><a href="https://www.youtube.com/channel/UCDF2kJjVThgfjjKqNaxGQeQ?view_as=subscriber"
-                        target="_blank"><img class="contact-icons" src="images/youtube-icon.png"></a></li>
+                <li><a href="https://www.youtube.com/channel/UCDF2kJjVThgfjjKqNaxGQeQ?" target="_blank"><img
+                            class="contact-icons" src="images/youtube-icon.png"></a></li>
             </ul>
         </div>
 
