updated main Hydra logo. updated links. updated Panda's personal info

--- a/naga.html
+++ b/naga.html
@@ -32,7 +32,7 @@
         <li><a class="slideout-list-items" href="#">Forum</a></li> -->
         <li><a class="slideout-list-items" href="store.html">Store</a></li>
       </ul>
-      <img class="img--frame__menu" src="images/main-logo.png" alt="main logo">
+      <img class="img--frame__menu" src="images/main-logo-large.png" alt="main logo">
     </div>
   </nav>
 
@@ -139,7 +139,7 @@
     </div>
 
     <div id="ex5" class="modal">
-      <img class="modal-logo" src="images/placeholder.png">
+      <img class="modal-logo" src="images/murky_logo.jpg">
       <p>Murky is a very goofy and fun to be around 24 year old that has had a love and passion for Rainbow Six Siege
         ever since day it was annouced at E3. He first started to play the game on console and the game suckered him
         into building his own PC. Dalton ''Murky" Adams has always wanted to play the game and learn something new every
@@ -174,7 +174,7 @@
         <ul>
           <li class="nav__item"><a href="index.html">Home</a></li>
           <li class="nav__item"><a href="index.html#news">News</a></li>
-          <li class="nav__item"><a href="index.html#sponsors">Sponsors</a></li>
+          <li class="nav__item"><a href="sponsors.html">Sponsors</a></li>
           <li class="nav__item"><a href="index.html#teams">Teams</a></li>
           <li class="nav__item"><a href="index.html#contact">Contact</a></li>
         </ul>
