--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
         <li><a class="slideout-list-items" href="#">Forum</a></li> -->
         <li><a class="slideout-list-items" href="store.html">Store</a></li>
       </ul>
-      <img class="img--frame__menu" src="images/main-logo.png" alt="main logo">
+      <img class="img--frame__menu" src="images/main-logo-large.png" alt="main logo">
     </div>
   </nav>
 
   <main id="panel">
     <header>
       <button class="toggle-button">☰</button>
-      <img class="img--logo" src="images/main-logo.png" alt="hydracore gaming logo">
+      <img class="img--logo" src="images/main-logo-large.png" alt="hydracore gaming logo">
       <h2 class="headline--primary">The Next Evolution in eSports</h2>
     </header>
 
@@ -89,7 +89,7 @@
           <hr>
         </div>
         <div class="skills--card">
-          <a href="turbulent.html"><img class="img--frame__teams" src="images/main-logo.png" alt="main logo">
+          <a href="turbulent.html"><img class="img--frame__teams" src="images/main-logo-large.png" alt="main logo">
             <h3 class="headline--tertiary">Team Turbulent</h3>
           </a>
           <hr>
@@ -100,14 +100,14 @@
           </a>
           <hr>
         </div>
-        <div class="skills--card">
+        <!-- <div class="skills--card">
           <a href="tranquil.html"><img class="img--frame__teams" src="images/team-tranquil.png" alt="tranquil logo">
             <h3 class="headline--tertiary">Team Tranquil</h3>
           </a>
           <hr>
-        </div>
+        </div> -->
         <div class="skills--card">
-          <a href="smash.html"><img class="img--frame__teams" src="images/main-logo.png" alt="main logo">
+          <a href="smash.html"><img class="img--frame__teams" src="images/main-logo-large.png" alt="main logo">
             <h3 class="headline--tertiary">Team Smash</h3>
           </a>
           <hr>
@@ -142,7 +142,7 @@
         <ul>
           <li class="nav__item"><a href="#">Home</a></li>
           <li class="nav__item"><a href="#news">News</a></li>
-          <li class="nav__item"><a href="#sponsors">Sponsors</a></li>
+          <li class="nav__item"><a href="sponsors.html">Sponsors</a></li>
           <li class="nav__item"><a href="#teams">Teams</a></li>
           <li class="nav__item"><a href="#contact">Contact</a></li>
         </ul>
