--- a/synergy.html
+++ b/synergy.html
@@ -32,7 +32,7 @@
                 <li><a class="slideout-list-items" href="#">Forum</a></li> -->
                 <li><a class="slideout-list-items" href="store.html">Store</a></li>
             </ul>
-            <img class="img--frame__menu" src="images/main-logo.png" alt="main logo">
+            <img class="img--frame__menu" src="images/main-logo-large.png" alt="main logo">
         </div>
     </nav>
 
@@ -59,7 +59,7 @@
                     <hr>
                 </div>
                 <div class="skills--card">
-                    <a href="#ex3" rel="modal:open"><img class="img--frame__roster" src="images/pria.png"
+                    <a href="#ex3" rel="modal:open"><img class="img--frame__roster" src="images/panda.png"
                             alt="main logo">
                         <h3 class="headline--tertiary">Panda.HCG</h3>
                     </a>
@@ -116,11 +116,10 @@
         </div>
 
         <div id="ex3" class="modal">
-            <img class="modal-logo" src="images/placeholder.png">
-            <p>I am an accomplished musician, joining symphonies starting in 8th grade. I’ve been playing video games
-                for as long as I can remember, starting out with the original Halo’s then into Overwatch to Counter
-                Strike and eventually onto Siege. Synergy has been a way for me to advance my skills both as a team mate
-                and a player. Can’t wait to see what this season has in store for us.
+            <img class="modal-logo" src="images/panda_logo.png">
+            <p>My name is Samuel, but I go by Panda. I am a 28 year old Twitch streamer who enjoys the little things in
+                life. Making people laugh is one of my favorite activities. Team based games are my go-to form of
+                entertainment.
             </p>
             <ul class="contact-info">
                 <!-- <li><a href="https://www.twitter.com/azohar_" target="_blank"><img class="contact-icons"
@@ -176,7 +175,7 @@
                 <ul>
                     <li class="nav__item"><a href="index.html">Home</a></li>
                     <li class="nav__item"><a href="index.html#news">News</a></li>
-                    <li class="nav__item"><a href="index.html#sponsors">Sponsors</a></li>
+                    <li class="nav__item"><a href="sponsors.html">Sponsors</a></li>
                     <li class="nav__item"><a href="index.html#teams">Teams</a></li>
                     <li class="nav__item"><a href="index.html#contact">Contact</a></li>
                 </ul>
