--- a/tranquil.html
+++ b/tranquil.html
@@ -32,7 +32,7 @@
                 <li><a class="slideout-list-items" href="#">Forum</a></li> -->
                 <li><a class="slideout-list-items" href="store.html">Store</a></li>
             </ul>
-            <img class="img--frame__menu" src="images/main-logo.png" alt="main logo">
+            <img class="img--frame__menu" src="images/main-logo-large.png" alt="main logo">
         </div>
     </nav>
 
@@ -158,7 +158,7 @@
                 <ul>
                     <li class="nav__item"><a href="index.html">Home</a></li>
                     <li class="nav__item"><a href="index.html#news">News</a></li>
-                    <li class="nav__item"><a href="index.html#sponsors">Sponsors</a></li>
+                    <li class="nav__item"><a href="sponsors.html">Sponsors</a></li>
                     <li class="nav__item"><a href="index.html#teams">Teams</a></li>
                     <li class="nav__item"><a href="index.html#contact">Contact</a></li>
                 </ul>
